--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.11.9",
+    "@types/request-promise": "^4.1.48",
+    "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "request": "^2.88.2",
+    "request-promise": "^4.2.6",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.3"
   },
