--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/request-promise": "^4.1.48",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "mongoose": "^6.7.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "ts-node": "^10.9.1",
