--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@types/node": "^18.11.9",
     "@types/request-promise": "^4.1.48",
+    "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "mongoose": "^6.7.2",
