--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
+    "fs": "^0.0.1-security",
     "mongoose": "^6.7.2",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
