--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^18.11.9",
+    "@types/objects-to-csv": "^1.3.1",
     "@types/request-promise": "^4.1.48",
     "axios": "^1.1.3",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.0.3",
     "fs": "^0.0.1-security",
     "mongoose": "^6.7.2",
+    "objects-to-csv": "^1.3.6",
     "request": "^2.88.2",
     "request-promise": "^4.2.6",
     "ts-node": "^10.9.1",
